# amica-python

./: .git-blame-ignore-revs  .gitignore  FAQ.html  README.md  about.html  genindex.html  index.html  install.html  objects.inv  pyproject.toml  search.html  searchindex.js  sg_execution_times.html
.circleci/: config.yml  fetch_amica_datasets.py
.github/actions/setup-env/: action.yml
.github/workflows/: ci.yaml  circleci_redirect.yml  publish-pypi.yml
_downloads/0f116796b9d58d39537701cbf25c560c/: plot_ica_blind_source_separation.ipynb
_downloads/13681ec716b50fcbe943c2d24173e0aa/: plot_sphere.py
_downloads/1fa87a8f739f7fab253420a51d7ce1b5/: plot_photos.ipynb
_downloads/3788403ef72025a152c96b6b11a1d2dc/: plot_ica_blind_source_separation.py
_downloads/4228faee7eb3a1a7e2b5559be6480e90/: plot_toy.py
_downloads/4edfd02a18156f3ab30151f2e586136b/: plot_eeg.py
_downloads/519abc8f083bc5b6a668be65e5709bb3/: plot_faces_decomposition.ipynb
_downloads/58943cfe223a5fea72a0b5d6e65a335e/: plot_toy.ipynb
_downloads/5a666f9fed969812e52f9d7a1f65966c/: plot_faces_decomposition.py
_downloads/60567cc66a1f0f76c8062a7d5b2268cd/: plot_amica.ipynb
_downloads/8d633f7c5a8b86241168b7d1822dbea6/: plot_astronomy_planck_cmb_separation.py
_downloads/95f608ee1da05bb62b268cc72120f111/: plot_ica_vs_pca.ipynb
_downloads/a2c4dcb2419dc977b4a1c9c310d5ccdd/: plot_pipe.ipynb
_downloads/b007a2bcd80e5f0796d6afccdaeb847b/: plot_astronomy_planck_cmb_separation.ipynb
_downloads/b4ff29590b33d137aede532cb16b3b6f/: plot_sphere.ipynb
_downloads/b6438c900ffd096a109bea141eddfe76/: plot_pipe.py
_downloads/b811ffdc153b6cca0000aeb69fd22d63/: plot_fmri.ipynb
_downloads/ec1406a8590becaade016dbafc59c2c2/: plot_eeg.ipynb
_sources/: FAQ.rst.txt  index.rst.txt  install.rst.txt  sg_execution_times.rst.txt
_sources/api/: functions.rst.txt
_sources/auto_examples/: index.rst.txt  plot_amica.rst.txt  plot_astronomy_planck_cmb_separation.rst.txt  plot_eeg.rst.txt  plot_faces_decomposition.rst.txt  plot_fmri.rst.txt  plot_ica_blind_source_separation.rst.txt  plot_ica_vs_pca.rst.txt  plot_photos.rst.txt  plot_pipe.rst.txt  plot_sphere.rst.txt  plot_toy.rst.txt  sg_execution_times.rst.txt
amica/: _batching.py  _typing.py  amica.py  chunking.py  constants.py  funmod.py  kernels.py  linalg.py  seed.py  state.py
amica/tests/: test_amica.py
api/: AMICA.html  datasets.html  functions.html  index.html  utils.html
auto_examples/: index.html  plot_amica.html  plot_astronomy_planck_cmb_separation.html  plot_eeg.html  plot_faces_decomposition.html  plot_fmri.html  plot_ica_blind_source_separation.html  plot_ica_vs_pca.html  plot_photos.html  plot_pipe.html  plot_sphere.html  plot_toy.html  sg_execution_times.html
docs/: Makefile
docs/source/: about.rst  conf.py  index.rst  install.rst  references.bib
docs/source/api/: AMICA.rst  datasets.rst  index.rst  utils.rst
docs/source/examples/: plot_amica.py  plot_astronomy_planck_cmb_separation.py  plot_eeg.py  plot_faces_decomposition.py  plot_fmri.py  plot_ica_blind_source_separation.py  plot_ica_vs_pca.py  plot_photos.py  plot_sphere.py  plot_toy.py
examples/: GALLERY_HEADER.html
scripts/: amica.py
src/amica/: __init__.py  _batching.py  _newton.py  _sklearn_interface.py  _types.py  amica.py  conftest.py  constants.py  core.py  datasets.py  kernels.py  linalg.py  state.py
src/amica/tests/: test_amica.py  test_batching.py  test_check_estimator.py  test_kernels.py  test_state.py  test_verbose.py
src/amica/utils/: __init__.py  _logging.py  _progress.py  _verbose.py  fetch.py  fortran.py  imports.py  mne.py  simulation.py
src/amica/utils/tests/: test_fetch.py  test_fortran.py  test_logger.py  test_mne.py
src/amica/utils/tests/assets/: amicadefs_test.param
