[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amica-python"
version = "0.1.0"
description = "Adaptive Mixture ICA in Python"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "loguru",
    "pooch >= 1.5", 
    "psutil",
    "numpy>=2.2.6",
    "scikit-learn>=1.7.0",
]

[project.optional-dependencies]
torch = ["torch>=2.2.0"]
cpu = ["torch-cpu"]  # This uses the torch-cpu index defined below
dev = ["pytest", "pytest-timeout", "matplotlib", "mne", "ruff"]
doc = ["sphinx<8.2", "shibuya", "sphinx-gallery", "numpydoc"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["amica*"]
exclude = ["amica.tests*"]

[tool.ruff.lint]
select = ["A", "B006", "D", "E", "F", "I", "UP", "UP031", "W"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"src/amica/_types.py" = ["E501"]  # Line too long
"src/amica/**/__init__.py" = ["D104"]  # Missing docstring in public package
"src/amica/**/tests/*.py" = ["D100"]  # Missing docstring in public module


[[tool.uv.index]]
name = "pytorch-cpu-index"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch-cpu = { index = "pytorch-cpu-index" }